<resources>
    <string name="app_name">DewChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">log in</string>
    <string name="no_account">Do you need a new account?</string>
    <string name="log_in_with">log in with</string>
    <string name="forget_password">Forget Password?</string>
    <string name="comfirm_password">Comfirm Password...</string>
    <string name="create_account">create account</string>
    <string name="reset_message">Please provide your account email, an email with a password reset link will be sent to you. take care!</string>
    <string name="reset_password">reset password</string>
    <string name="account_email_address">account email address</string>
    <string name="update_account_details">update account details</string>
    <string name="relationship_status">relationship status</string>
    <string name="gender">gender</string>
    <string name="date_of_birth">date of birth</string>
    <string name="country">country</string>
    <string name="full_name">full name</string>
    <string name="user_name">user name</string>
    <string name="profile_status">profile status</string>
    <string name="save">Save</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an Account, sign up here?</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="password_hint">Password...</string>
    <string name="email_hint">Email...</string>
    <string name="write_something">write something about the image...</string>
    <string name="publish_post">publish post</string>
    <string name="sign_out">Sign out</string>
    <string name="gallery">Gallery</string>
    <string name="account_details">Account Details</string>
    <string name="profile">Profile</string>
    <string name="updated_a_post">has been updated a post </string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="post_description">Post description...</string>
    <string name="comments">Comments:</string>
    <string name="write_a_comment_here">write a comment here.</string>
    <string name="update_account_settings">update account settings</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="unfriend_this_person">Unfriend this person</string>
    <string name="facebook_app_id">741091476232556</string>
    <string name="fb_login_protocol_scheme">fb741091476232556</string>

</resources>
