<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".ui.SettingsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settingsProfileImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:src="@drawable/profile" />

            <EditText
                android:id="@+id/settingsStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsProfileImage"
                android:layout_marginLeft="@dimen/space_32dp"
                android:layout_marginRight="@dimen/space_32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/inputs"
                android:hint="@string/profile_status"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settingsUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsStatus"
                android:layout_marginLeft="@dimen/space_32dp"
                android:layout_marginRight="@dimen/space_32dp"
                android:layout_marginTop="@dimen/space_16dp"
                android:background="@drawable/inputs"
                android:hint="@string/user_name"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settingsProfileFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsUsername"
                android:layout_marginLeft="@dimen/space_32dp"
                android:layout_marginRight="@dimen/space_32dp"
                android:layout_marginTop="@dimen/space_16dp"
                android:background="@drawable/inputs"
                android:hint="@string/full_name"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settingsCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsProfileFullName"
                android:layout_marginStart="@dimen/space_32dp"
                android:layout_marginEnd="@dimen/space_32dp"
                android:layout_marginTop="@dimen/space_16dp"
                android:background="@drawable/inputs"
                android:hint="@string/country"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settingsDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsCountry"
                android:layout_marginLeft="@dimen/space_32dp"
                android:layout_marginRight="@dimen/space_32dp"
                android:layout_marginTop="@dimen/space_16dp"
                android:background="@drawable/inputs"
                android:hint="@string/date_of_birth"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settingsGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsDOB"
                android:layout_marginLeft="@dimen/space_32dp"
                android:layout_marginRight="@dimen/space_32dp"
                android:layout_marginTop="@dimen/space_16dp"
                android:background="@drawable/inputs"
                android:hint="@string/gender"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settingsRelationshipStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsGender"
                android:layout_marginLeft="@dimen/space_32dp"
                android:layout_marginRight="@dimen/space_32dp"
                android:layout_marginTop="@dimen/space_16dp"
                android:background="@drawable/inputs"
                android:hint="@string/relationship_status"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/updateAccountSettingsButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/settingsRelationshipStatus"
                android:layout_marginEnd="@dimen/space_32dp"
                android:layout_marginStart="@dimen/space_32dp"
                android:layout_marginTop="@dimen/space_16dp"
                android:layout_marginBottom="@dimen/space_16dp"
                android:background="@drawable/button"
                android:text="@string/update_account_settings"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/settingsProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:layout_marginTop="315dp" />
        </RelativeLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>