<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.SetupActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setupUserProfileImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginEnd="@dimen/space_8dp"
        android:layout_marginStart="@dimen/space_8dp"
        android:layout_marginTop="@dimen/space_32dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setupUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_32dp"
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginTop="@dimen/space_32dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/username"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textMultiLine"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupUserProfileImage" />

    <EditText
        android:id="@+id/setupUserFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_32dp"
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginTop="@dimen/space_16dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/name"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textMultiLine"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupUserName" />

    <EditText
        android:id="@+id/setupUserCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_32dp"
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginTop="@dimen/space_16dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/country"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textPersonName"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupUserFullName" />

    <Button
        android:id="@+id/setupSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/space_32dp"
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:text="@string/save"
        android:textColor="@android:color/background_light"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupUserCountry" />

    <ProgressBar
        android:id="@+id/setupProgressBar"
        android:layout_centerInParent="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminateDrawable="@drawable/custom_progress_bar"
        android:indeterminateDuration="2000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>