<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.ResetPasswordActivity">


    <ImageView
        android:id="@+id/reset_logo"
        android:layout_width="@dimen/space_120dp"
        android:layout_height="@dimen/space_120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/space_8dp"
        android:layout_marginStart="@dimen/space_8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dew_logo" />

    <TextView
        android:id="@+id/reset_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_32dp"
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginTop="8dp"
        android:paddingEnd="@dimen/space_16dp"
        android:paddingStart="@dimen/space_16dp"
        android:text="@string/reset_message"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_logo" />

    <EditText
        android:id="@+id/resetEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_32dp"
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginTop="@dimen/space_16dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:hint="@string/account_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_message" />

    <Button
        android:id="@+id/resetSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetEmailAddress"
        android:layout_marginEnd="@dimen/space_32dp"
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginTop="@dimen/space_16dp"
        android:background="@drawable/button"
        android:text="@string/reset_password"
        android:textColor="@android:color/background_light"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetEmailAddress" />

</android.support.constraint.ConstraintLayout>